--- a/quick-vote-express-main/index.html
+++ b/quick-vote-express-main/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>quick-vote-express</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Pollar-Bear</title>
+    <meta name="description" content="Create Polls that Roar!" />
+    <meta name="author" content="V.stj" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
